Preset maximum heap size for VMs